<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_MDP_Error" Id="{269157c4-d10e-4b47-996d-9898743264f5}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_MDP_Error :
STRUCT
	mdp_state : BYTE;
	padding	  : BYTE;
	mdp_error : DWORD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>