<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL" Id="{010dfc94-3f13-4598-ad85-5aa8eec9bf3c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	amsNetId : T_AmsNetId  := '';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>